Update requirements.txt to replace apa102-pi with spidev for SPI control on Raspberry Pi.

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ numpy  # For array operations
 # Optional RPI-specific dependencies
 RPi.GPIO; platform_system == "Linux"  # GPIO control for Raspberry Pi
 gpiozero; platform_system == "Linux"  # GPIO utilities for Raspberry Pi
-apa102-pi; platform_system == "Linux"  # For LED control on ReSpeaker
+spidev; platform_system == "Linux"  # SPI control for Raspberry Pi
