Refactor app.py to integrate Prompt2Sand for image generation and prompt extraction. Remove unused functions and streamline the recording process for better performance. Update .env.example to include a new DRAW_PROMPT variable for image generation instructions.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ DW_URL=http://localhost:8080
 
 # GOOGLE GEMINI API KEY
 GEMINI_API_KEY=
+
+# DRAW PROMPT
+DRAW_PROMPT="Draw an image of the following: {{}}. But make it a simple black silhouette on a white background, with very minimal detail and no additional content in the image, so I can use it for a computer icon."
