Update requirements.txt to include lgpio for Raspberry Pi GPIO utilities
- Added lgpio as a dependency for GPIO utilities on Raspberry Pi.
- Ensured spidev is listed correctly for SPI control on Linux.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ pyaudio  # For audio input
 RPi.GPIO; platform_system == "Linux"  # GPIO control for Raspberry Pi
 gpiozero; platform_system == "Linux"  # GPIO utilities for Raspberry Pi
 spidev; platform_system == "Linux"  # SPI control for Raspberry Pi
+lgpio; platform_system == "Linux"  # GPIO utilities for Raspberry Pi
